--- a/testdata/test.html
+++ b/testdata/test.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>This is a test</title>
+<title>This is another test</title>
 </head>
 <body>
-<h1>This is a test</h1>
+<h1>This is another test</h1>
 </body>
 </html>
